syntax="proto3";

package net.devh.boot.grpc.example;

option java_multiple_files = true;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_outer_classname = "ProductOrderServiceProto";

service ProductOrderService{

  rpc SendOrderToProduct(OrderProductRequest) returns (ProductResultReply);
}

message Product{

  string productName=1;
  int32 productQuantity=2;
}


message OrderProductRequest{

  repeated Product products=1;
}

message ProductResultReply{

  bool isSucceed=1;
}